--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,22 @@
+#
+# Copyright (C) 2023 Meowool <https://github.com/meowool/graphs/contributors>
+#
+# This file is part of the Yabai project <https://github.com/meowool/yabai>.
+#
+# Yabai is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+#
+# Yabai is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General Public License
+# along with Yabai.  If not, see <https://www.gnu.org/licenses/>.
+#
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://github.com/meowool/cradle/releases/download/v8.4.0.1-RC1/cradle-8.4.0.1-rc-1-all.zip
