chore: remove `detekt` plugin jar download task
This commit removes the task responsible for downloading the Detekt plugins. We have decided to use CI pipeline in conjunction with Renovate to handle the downloading and updating of these third-party plugins, instead of relying on the unpredictable Gradle task.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ gradle/build-logic/build/
 !/.idea/runConfigurations/
 !/.idea/runConfigurations/**
 # Plugins
+!/.idea/jsonSchemas.xml
 !/.idea/gradle.xml
+!/.idea/detekt.xml
 
 ### Mac OS ###
 .DS_Store
