build: use CI-built archive instead of R8 submodule
Refs: https://r8.googlesource.com/r8/+/refs/tags/8.3.2-dev#obtaining-prebuilts

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -19,7 +19,7 @@
 
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://github.com/meowool/cradle/releases/download/v8.4.0.1-RC1/cradle-8.4.0.1-rc-1-all.zip
+distributionUrl=https\://github.com/meowool/cradle/releases/download/v8.4.0.1/cradle-8.4.0.1-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
