--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
+agp = "8.3.0-alpha12"
 kotlin = "1.9.10"
-androidx-activity = "1.8.0-rc01"
-google-ksp = "1.9.10-1.0.13"
+androidx-activity = "1.8.0"
 square-kotlinpoet = "1.14.2"
-google-hilt = "2.47"
-auto-service = "1.1.0"
-detekt = "1.23.1"
-asm = "9.5"
+google-ksp = "1.9.10-1.0.13"
+google-hilt = "2.48.1"
+auto-service = "1.1.1"
+detekt = "1.23.3"
+asm = "9.6"
 
 [libraries]
 ### Kotlin
@@ -34,7 +35,7 @@ androidx-compose-material = { module = "androidx.compose.material:material" }
 ### Google
 google-dagger-hilt = { module = "com.google.dagger:hilt-android", version.ref = "google-hilt" }
 google-dagger-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "google-hilt" }
-google-guava = "com.google.guava:guava:32.1.2-jre"
+google-guava = "com.google.guava:guava:32.1.3-jre"
 google-gson = "com.google.code.gson:gson:2.10.1"
 google-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "google-ksp" }
 ### Square
@@ -42,16 +43,15 @@ square-kotlinpoet = { module = "com.squareup:kotlinpoet", version.ref = "square-
 square-kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "square-kotlinpoet" }
 ### Build system
 # This is basically only used in modules related to "building logic"
-android-desugar = "com.android.tools:desugar_jdk_libs_nio:2.0.3"
-# IDEA does not support the latest bleeding-edge versions, so we will choose a relatively advanced version
-# noinspection AndroidGradlePluginVersion
-android-gradle-plugin = "com.android.tools.build:gradle:8.1.1"
+android-r8 = "com.android.tools:r8:d7c5c9ea3988797438061e250c48c0c5302b8150"
+android-desugar = "com.android.tools:desugar_jdk_libs_nio:2.0.4"
+android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 ### Others
 fastutil = "it.unimi.dsi:fastutil:8.5.12"
 ## Detekt
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-detekt-compose = "io.nlopez.compose.rules:detekt:0.3.0"
+detekt-compose = "io.nlopez.compose.rules:detekt:0.3.3"
 asm = { module = "org.ow2.asm:asm", version.ref = "asm" }
 asm-analysis = { module = "org.ow2.asm:asm-analysis", version.ref = "asm" }
 asm-commons = { module = "org.ow2.asm:asm-commons", version.ref = "asm" }
