--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-agp = "8.3.0-alpha12"
-kotlin = "1.9.10"
-androidx-activity = "1.8.0"
+agp = "8.3.0-alpha16"
+kotlin = "1.9.21"
+androidx-activity = "1.8.1"
 square-kotlinpoet = "1.14.2"
-google-ksp = "1.9.10-1.0.13"
-google-hilt = "2.48.1"
+google-ksp = "1.9.21-1.0.15"
+google-hilt = "2.49"
 auto-service = "1.1.1"
-detekt = "1.23.3"
+detekt = "1.23.4"
 asm = "9.6"
 
 [libraries]
@@ -17,41 +17,42 @@ kotlin-metadata = "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.7.0"
 ### AndroidX
 androidx-core = "androidx.core:core-ktx:1.12.0"
 androidx-annotation = "androidx.annotation:annotation:1.7.0"
-androidx-test-core = "androidx.test:core-ktx:1.6.0-alpha02"
-androidx-test-rules = "androidx.test:rules:1.6.0-alpha01"
-androidx-test-runner = "androidx.test:runner:1.6.0-alpha04"
+androidx-test-core = "androidx.test:core-ktx:1.6.0-alpha03"
+androidx-test-rules = "androidx.test:rules:1.6.0-alpha02"
+androidx-test-runner = "androidx.test:runner:1.6.0-alpha05"
 androidx-test-ext-junit = "androidx.test.ext:junit-ktx:1.2.0-alpha01"
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 ### Compose
 # Use https://github.com/chrisbanes/compose-bom instead of the official one because Jetpack Compose
 # itself is not stable, so there is no reason to use false "stable" versions :)
-androidx-compose-bom = "dev.chrisbanes.compose:compose-bom:2023.10.00-alpha02"
-androidx-compose-compiler = "androidx.compose.compiler:compiler:1.5.3"
+androidx-compose-bom = "dev.chrisbanes.compose:compose-bom:2023.12.00-alpha03"
+androidx-compose-compiler = "androidx.compose.compiler:compiler:1.5.5"
 androidx-compose-ui-util = { module = "androidx.compose.ui:ui-util" }
 androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-compose-material = { module = "androidx.compose.material:material" }
 ### Google
-google-dagger-hilt = { module = "com.google.dagger:hilt-android", version.ref = "google-hilt" }
-google-dagger-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "google-hilt" }
+google-hilt = { module = "com.google.dagger:hilt-android", version.ref = "google-hilt" }
+google-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "google-hilt" }
+google-hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "google-hilt" }
 google-guava = "com.google.guava:guava:32.1.3-jre"
 google-gson = "com.google.code.gson:gson:2.10.1"
 google-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "google-ksp" }
+google-ksp-gradle-plugin = { module = "com.google.devtools.ksp:symbol-processing-gradle-plugin", version.ref = "google-ksp" }
 ### Square
 square-kotlinpoet = { module = "com.squareup:kotlinpoet", version.ref = "square-kotlinpoet" }
 square-kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "square-kotlinpoet" }
 ### Build system
 # This is basically only used in modules related to "building logic"
-android-r8 = "com.android.tools:r8:d7c5c9ea3988797438061e250c48c0c5302b8150"
 android-desugar = "com.android.tools:desugar_jdk_libs_nio:2.0.4"
+# https://ci.chromium.org/p/r8/g/main/console
+android-r8 = "com.android.tools:r8:95c1b22fe3a8645696a4e396fb3a3d5dd5f4a55c"
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 ### Others
 fastutil = "it.unimi.dsi:fastutil:8.5.12"
-## Detekt
-detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-detekt-compose = "io.nlopez.compose.rules:detekt:0.3.3"
+reflections = "org.reflections:reflections:0.10.2"
 asm = { module = "org.ow2.asm:asm", version.ref = "asm" }
 asm-analysis = { module = "org.ow2.asm:asm-analysis", version.ref = "asm" }
 asm-commons = { module = "org.ow2.asm:asm-commons", version.ref = "asm" }
@@ -59,12 +60,10 @@ asm-tree = { module = "org.ow2.asm:asm-tree", version.ref = "asm" }
 asm-util = { module = "org.ow2.asm:asm-util", version.ref = "asm" }
 auto-service = { module = "dev.zacsweers.autoservice:auto-service-ksp", version.ref = "auto-service" }
 auto-service-annotations = { module = "com.google.auto.service:auto-service-annotations", version.ref = "auto-service" }
-
-[plugins]
-### Build system
-google-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp" }
-google-hilt = { id = "com.google.dagger.hilt.android", version.ref = "google-hilt" }
-detekt = { id = "io.github.detekt.gradle.compiler-plugin", version.ref = "detekt" }
+## Detekt
+detekt-compose = "io.nlopez.compose.rules:detekt:0.3.3"
+detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+detekt-gradle-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 
 [bundles]
 androidx-compose = ["androidx-compose-material", "androidx-compose-ui-util"]
